app header.less: remove auto overflow-y; landingView: fixed redirect

--- a/webapp/app/components/header/header.less
+++ b/webapp/app/components/header/header.less
@@ -9,7 +9,6 @@
   background: white;
   color: @text-mute;
   padding: 0 20px;
-  overflow-y: auto;
 }
 
 .app-header__toggle-navigation-visible {
